[package]
name = "chatgpt-client"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
futures-util = "0.3"
uuid = { version = "1.4", features = ["v4"] }
