[package]
name = "chatgpt-client"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8"
futures-util = "0.3"
uuid = { version = "1.4", features = ["v4"] }
log = "0.4"
env_logger = "0.11.5"
chrono = "0.4"
base64 = "0.22.1"
image = "0.25.5"
rfd = "0.15.0"
rayon = "1.7"
num_cpus = "1.15"
lazy_static = "1.4"
egui_commonmark = { version = "0.18.0", features = [
    "better_syntax_highlighting",
    "fetch"] }
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
